fixed alignment work page

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -22,6 +22,7 @@ body{
     width:100%;
     gap:1em;
     padding:40px;
+    padding-left:60px;
 }
 
 .fontUse{
